--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[workspace]
-members = ["crates/http-tokio-router-macro"]
-
 [package]
 name = "http-tokio-router"
 version = "0.1.0"
@@ -9,6 +6,7 @@ edition = "2021"
 [dependencies]
 http-tokio = { git = "https://github.com/rust-http-server/http-tokio" }
 http-tokio-router-macro = { path = "./crates/http-tokio-router-macro" }
+tokio = { version = "1", features = ["rt", "net"] }
 anymap = "0.12.1"
 async_fn_traits = "0.1.1"
 bytes = "1.10.1"
